--- a/components/header.html
+++ b/components/header.html
@@ -2,7 +2,7 @@
 <div class="header">
     <div class="container">
         <div class="header__logo">
-            <a href="/Orpps/recettes.html" id="userLogoLink"> <!-- Lien non défini pour le moment -->
+            <a href="/Orpps/recettes.html" id="userLogoLink"> 
                 <div class="user-logo">
                     <img src="/Orpps/assets/images/logos_orpps/user_logo_hat.png" alt="User Logo Hat" class="user-logo__hat">
                     <img src="/Orpps/assets/images/logos_orpps/user_logo_mustache.png" alt="User Logo Mustache" class="user-logo__mustache">
