--- a/components/header.html
+++ b/components/header.html
@@ -2,15 +2,17 @@
 <div class="header">
     <div class="container">
         <div class="header__logo">
-            <a href="/Orpps/recettes.html" id="userLogoLink"> 
-                <div class="user-logo">
+            <div class="user-logo">
+                <a href="/Orpps/recettes.html" id="userLogoLink"> 
                     <img src="/Orpps/assets/images/logos_orpps/user_logo_hat.png" alt="User Logo Hat" class="user-logo__hat">
                     <img src="/Orpps/assets/images/logos_orpps/user_logo_mustache.png" alt="User Logo Mustache" class="user-logo__mustache">
-                </div>
-            </a>
-            <a href="/Orpps/index.html">
-                <img src="/Orpps/assets/images/logos_orpps/orpps_logo.png" alt="Orpps Logo">
-            </a>    
+                </a>
+            </div>
+            <div class="orpps-logo">
+                <a href="/Orpps/index.html">
+                    <img src="/Orpps/assets/images/logos_orpps/orpps_logo.png" alt="Orpps Logo">
+                </a>
+            </div>    
         </div>
         <div id="burgerMenu" class="header__burger" aria-haspopup="menu" aria-label="Menu">
             <span class="bar bar1"></span>
