--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,7 @@ h1, h2, h3 {
     position: fixed;
     top: 0;
     left: 0;
-    width: -webki;
+    width: 100%;
     z-index: 1000;
     margin: 0 auto;
     box-sizing: border-box;
