--- a/components/header.html
+++ b/components/header.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div id="overlayMenu" class="header__overlay">
-        <div class="header__mobile-nav">
+        <div class="header__nav">
             <ul>
                 <li><a href="/Orpps/recettes.html">Recettes</a></li>
                 <li><a href="/Orpps/liste_de_course.html">Liste de course</a></li>
