ajout de responsive sur --page-max-width

--- a/css/styles.css
+++ b/css/styles.css
@@ -222,8 +222,39 @@ h1, h2, h3 {
 
 
 :root {
-    --page-max-width: 980px;
+    --page-max-width: 1240px; /* Valeur par défaut pour les grands écrans */
 }
+
+/* Styles pour les écrans de taille mobile */
+@media (max-width: 450px) {
+    :root {
+        --page-max-width: 100%; /* 100% de la largeur pour mobile */
+    }
+}
+
+/* Styles pour les tablettes */
+@media (min-width: 451px) and (max-width: 980px) {
+    :root {
+        --page-max-width: 450px; /* 450px pour les petits écrans */
+    }
+}
+
+/* Styles pour le web */
+@media (min-width: 981px) and (max-width: 1240px) {
+    :root {
+        --page-max-width: 980px; /* 980px pour les écrans intermédiaires */
+    }
+}
+
+/* Styles pour les très grands écrans */
+@media (min-width: 1241px) {
+    :root {
+        --page-max-width: 1240px; /* 1240px pour les grands écrans */
+    }
+}
+
+
+
 
 
 
