--- a/components/header.html
+++ b/components/header.html
@@ -25,6 +25,7 @@
         <div class="header__nav">
             <ul>
                 <li><a href="/Orpps/recettes.html">Recettes</a></li>
+                <li><a href="#">Planification de menu</a></li>
                 <li><a href="/Orpps/liste_de_course.html">Liste de course</a></li>
             </ul>
         </div>
