--- a/css/styles.css
+++ b/css/styles.css
@@ -466,7 +466,7 @@ h1, h2, h3 {
 
 
 
-/* --- Styles pour le menu mobile --- */
+/* --- Styles pour le menu --- */
 .header__nav {
     display: none; /* Masquer par défaut */
     flex-direction: column; /* Disposer les éléments verticalement */
@@ -529,6 +529,13 @@ h1, h2, h3 {
 }
 
 
+/* ajout d'un class pour les SVG du header nav */
+.header__nav__sgg-icon {
+    width: 40px; /* Largeur de l'icône */
+    height: 40px; /* Hauteur de l'icône */
+    margin-right: 10px; /* Marge à droite pour espacer le texte */
+    fill: #CB6863; /* Couleur de remplissage par défaut */
+}
 
 
 
