--- a/components/header.html
+++ b/components/header.html
@@ -30,9 +30,6 @@
                             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
                             <g id="SVGRepo_iconCarrier">
-                                <style type="text/css">
-                                    .st0{fill:#CB6863;}
-                                </style>
                                 <g>
                                     <path class="st0" d="M371.884,0c-56.563,0-102.406,56.594-102.406,120.469c0,38.875,18.281,73.156,40.625,94.5c19.609,18.75,31.656,33.188,34.063,64.516v206.563c0,14.328,11.625,25.953,25.953,25.953h3.516c14.328,0,25.953-11.625,25.953-25.953V279.484c2.406-31.328,14.453-45.766,34.063-64.516c22.344-21.344,40.625-55.625,40.625-94.5C474.274,56.594,428.415,0,371.884,0z"></path>
                                     <path class="st0" d="M188.587,24.547v109.375c0,6.984-5.656,12.656-12.641,12.656h-3.391c-6.969,0-12.641-5.672-12.641-12.656V24.047c0-18.016-12.125-23.422-23.766-23.422c-11.625,0-23.75,5.406-23.75,23.422v109.875c0,6.984-5.672,12.656-12.656,12.656h-3.375c-6.984,0-12.641-5.672-12.641-12.656V24.547c0-32.266-46-31.172-46,0.359c0,37.75,0,104.438,0,104.438c-0.219,58,13.641,73.047,36.516,91.125c18.438,14.563,34.203,22.875,34.203,59.031v206.547c0,14.328,11.609,25.953,25.953,25.953h3.516c14.328,0,25.953-11.625,25.953-25.953V279.5c0-36.156,15.75-44.469,34.188-59.031c22.891-18.078,36.75-33.125,36.531-91.125c0,0,0-66.688,0-104.438C234.587-6.625,188.587-7.719,188.587,24.547z"></path>
@@ -48,7 +45,7 @@
                             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
                             <g id="SVGRepo_iconCarrier">
-                                <path d="M16.7502 3.56V2C16.7502 1.59 16.4102 1.25 16.0002 1.25C15.5902 1.25 15.2502 1.59 15.2502 2V3.5H8.75023V2C8.75023 1.59 8.41023 1.25 8.00023 1.25C7.59023 1.25 7.25023 1.59 7.25023 2V3.56C4.55023 3.81 3.24023 5.42 3.04023 7.81C3.02023 8.1 3.26023 8.34 3.54023 8.34H20.4602C20.7502 8.34 20.9902 8.09 20.9602 7.81C20.7602 5.42 19.4502 3.81 16.7502 3.56Z" fill="#CB6863"></path>
+                                <path d="M16.7502 3.56V2C16.7502 1.59 16.4102 1.25 16.0002 1.25C15.5902 1.25 15.2502 1.59 15.2502 2V3.5H8.75023V2C8.75023 1.59 8.41023 1.25 8.00023 1.25C7.59023 1.25 7.25023 1.59 7.25023 2V3.56C4.55023 3.81 3.24023 5.42 3.04023 7.81C3.02023 8.1 3.26023 8.34 3.54023 8.34H20.4602C20.7502 8.34 20.9902 8.09 20.9602 7.81C20.7602 5.42 19.4502 3.81 16.7502 3.56Z"></path>
                                 <path d="M20 9.83984H4C3.45 9.83984 3 10.2898 3 10.8398V16.9998C3 19.9998 4.5 21.9998 8 21.9998H16C19.5 21.9998 21 19.9998 21 16.9998V10.8398C21 10.2898 20.55 9.83984 20 9.83984ZM14.84 14.9898L14.34 15.4998H14.33L11.3 18.5298C11.17 18.6598 10.9 18.7998 10.71 18.8198L9.36 19.0198C8.87 19.0898 8.53 18.7398 8.6 18.2598L8.79 16.8998C8.82 16.7098 8.95 16.4498 9.08 16.3098L12.12 13.2798L12.62 12.7698C12.95 12.4398 13.32 12.1998 13.72 12.1998C14.06 12.1998 14.43 12.3598 14.84 12.7698C15.74 13.6698 15.45 14.3798 14.84 14.9898Z" fill="#CB6863"></path>
                             </g>
                         </svg>
@@ -61,7 +58,7 @@
                             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
                             <g id="SVGRepo_iconCarrier">
-                                <path d="M21.76,8.35A1,1,0,0,0,21,8H3A1,1,0,0,0,2,9.16L3.87,20.33a2,2,0,0,0,2,1.67h12.3a2,2,0,0,0,2-1.67L22,9.16A1,1,0,0,0,21.76,8.35ZM9,17a1,1,0,0,1-2,0V13a1,1,0,0,1,2,0Zm4,0a1,1,0,0,1-2,0V13a1,1,0,0,1,2,0Zm4,0a1,1,0,0,1-2,0V13a1,1,0,0,1,2,0ZM8.72,7H6.61L8.05,2.68a1,1,0,1,1,1.9.64Zm5.33-3.68A1,1,0,0,1,16,2.68L17.39,7h-2.11A1,1,0,0,1,13.82,3.32Z" fill="#CB6863"></path>
+                                <path d="M21.76,8.35A1,1,0,0,0,21,8H3A1,1,0,0,0,2,9.16L3.87,20.33a2,2,0,0,0,2,1.67h12.3a2,2,0,0,0,2-1.67L22,9.16A1,1,0,0,0,21.76,8.35ZM9,17a1,1,0,0,1-2,0V13a1,1,0,0,1,2,0Zm4,0a1,1,0,0,1-2,0V13a1,1,0,0,1,2,0Zm4,0a1,1,0,0,1-2,0V13a1,1,0,0,1,2,0ZM8.72,7H6.61L8.05,2.68a1,1,0,1,1,1.9.64Zm5.33-3.68A1,1,0,0,1,16,2.68L17.39,7h-2.11A1,1,0,0,1,13.82,3.32Z"></path>
                             </g>
                         </svg>
                         Liste de courses
