--- a/components/header.html
+++ b/components/header.html
@@ -25,7 +25,7 @@
         <div class="header__nav">
             <ul>
                 <li>
-                    <a href="/Orpps/recettes.html">
+                    <a href="/Orpps/recettes/Magret de canard (sauce au miel et thym)/index.html">
                         <svg version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="header__nav__sgg-icon" viewBox="0 0 512 512" xml:space="preserve" fill="#000000">
                             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
