--- a/css/recettes.css
+++ b/css/recettes.css
@@ -70,11 +70,11 @@ p { font-weight: 200; font-size: 16px;}*/
 
 
 .preparation-instruction {
-    padding: 0 70px 35px 70px;
+    /* padding: 0 70px 35px 70px; */
 }
 
 .preparation-ingrédients {
-    padding: 0 70px 35px 70px;
+    /* padding: 0 70px 35px 70px; */
 }
 
 
