--- a/css/recettes.css
+++ b/css/recettes.css
@@ -7,8 +7,9 @@ h5 { color: #CB6863; font-weight: 700; font-size: 16px; }
 p { font-weight: 200; font-size: 16px;}*/
 
 .page-container {
-    /*width: 100%; /* Assure que le conteneur utilise toute la largeur disponible jusqu'à max-width */
     max-width: var(--page-max-width);
+    width: 100%;
+    margin: 0 auto;
 }
 
 
