--- a/css/recettes.css
+++ b/css/recettes.css
@@ -19,7 +19,7 @@ p { font-weight: 200; font-size: 16px;}*/
 .titre-recette {
     text-align: center; /* Centre le texte */
     font-weight: bold; /* Rend le texte en gras */
-    padding: 50px 0 50px 0;
+    padding: 50px 5px 50px 5px;
     margin: var(--page-margin);
     max-width: var(--page-max-width);
 }
@@ -43,7 +43,7 @@ p { font-weight: 200; font-size: 16px;}*/
 .titre-section-container {
     display: flex;
     align-items: center; /* Centre verticalement les éléments */
-    padding: 0 0 35px 0;
+    padding: 0 5px 35px 5px;
 }
 
 .titre-section-image {
