--- a/css/recettes.css
+++ b/css/recettes.css
@@ -39,10 +39,19 @@ p { font-weight: 200; font-size: 16px;}*/
 
 
 .section-ingredient {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 100%;
+    display: grid;
+    gap: 10px;
+}
+@media (min-width: 450) {
+    .section-ingredient {
+        grid-template-columns: repeat(2, 1fr); /* 2 colonnes sur les écrans plus larges */
+    }
+}
+
+@media (max-width: 449) {
+    .section-ingredient {
+        grid-template-columns: 1fr; /* 1 colonne sur les écrans plus petits */
+    }
 }
 
 .section-ingredient-container{
