padding section ingredient et instruction

--- a/css/recettes.css
+++ b/css/recettes.css
@@ -80,11 +80,11 @@ p { font-weight: 200; font-size: 16px;}*/
 
 
 .preparation-instruction {
-    /* padding: 0 70px 35px 70px; */
+    0 15px 35px 15px
 }
 
 .preparation-ingrédients {
-    /* padding: 0 70px 35px 70px; */
+    0 15px 35px 15px
 }
 
 
