--- a/css/recettes.css
+++ b/css/recettes.css
@@ -80,11 +80,11 @@ p { font-weight: 200; font-size: 16px;}*/
 
 
 .preparation-instruction {
-    0 15px 35px 15px
+    padding: 0 15px 35px 15px;
 }
 
 .preparation-ingrédients {
-    0 15px 35px 15px
+    padding: 0 15px 35px 15px;
 }
 
 
