--- a/css/recettes.css
+++ b/css/recettes.css
@@ -89,7 +89,7 @@ p { font-weight: 200; font-size: 16px;}*/
 
 
 .etape {
-    padding: 0 0 0 20px;
+    padding: 0 20px 0 20px;
 }
 ul {
     list-style-type: disc;
