--- a/components/header.html
+++ b/components/header.html
@@ -26,7 +26,7 @@
             <ul>
                 <li>
                     <a href="/Orpps/recettes/Magret de canard (sauce au miel et thym)/index.html">
-                        <svg version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="header__nav__sgg-icon" viewBox="0 0 512 512" xml:space="preserve" fill="#000000">
+                        <svg version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="header__nav__svg-icon" viewBox="0 0 512 512" xml:space="preserve" fill="#000000">
                             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
                             <g id="SVGRepo_iconCarrier">
@@ -41,7 +41,7 @@
                 </li>
                 <li>
                     <a href="/Orpps/planification_de_menu.html">
-                        <svg class="header__nav__sgg-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="header__nav__svg-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
                             <g id="SVGRepo_iconCarrier">
@@ -54,7 +54,7 @@
                 </li>
                 <li>
                     <a href="/Orpps/liste_de_course.html">
-                        <svg class="header__nav__sgg-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" id="bag-alt-1" class="icon glyph" fill="#000000">
+                        <svg class="header__nav__svg-icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" id="bag-alt-1" class="icon glyph" fill="#000000">
                             <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                             <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
                             <g id="SVGRepo_iconCarrier">
