--- a/css/recettes.css
+++ b/css/recettes.css
@@ -105,8 +105,8 @@ ul {
 .portion-bring-conteneur {
     display: flex;
     align-items: center; /* Centre verticalement les enfants */
-    justify-content: flex-end; /* Aligne le contenu à droite */
-    padding: 0 0 50px 0;
+    justify-content: center; /* Aligne le contenu à droite */
+    padding: 0 0 35px 0;
 }
 
 .portion-control {
@@ -123,7 +123,6 @@ ul {
     color: #CB6863;
     font-family: 'Open Sans', sans-serif;
     user-select: none;
-    margin-bottom: 35px;
 }
 
 /* Boutons */
@@ -330,6 +329,9 @@ input {
         margin-left: 0;
         margin-right: 15px;
     }
+    .portion-bring-conteneur {
+        margin-right: 15px;
+    }
 }
 
 @media (max-width: 699px) {
@@ -339,6 +341,9 @@ input {
     .portion-control {
         margin-left: auto;
         margin-right: auto;
+    }
+    .portion-bring-conteneur {
+        margin-right: 15px;
     }
 }
 @media (max-width: 450px) {
